<resources>
    <string name="app_name">BarcodeReaderTest</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_barcode_scanner">BarcodeScanner</string>

    <string name="label_barcode">Codice a barre:</string>
    <string name="label_note">Note:</string>
    <string name="label_aggiungi_foto">Aggiungi una foto</string>

    <string name="btn_start_scanning">Nuova scansione</string>
    <string name="btn_send_post">Invia</string>
    <string name="btn_reset_post">Cancella</string>
</resources>
